# Digithon

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json  skills-lock.json  tsconfig.base.json
apps/agent/: Dockerfile  README.md  pyproject.toml  requirements.txt  server.py
apps/agent/vera/: __init__.py  agent.py  main.py  repository.py  state_machine.py
apps/channels/: Dockerfile  README.md  package.json
apps/channels/src/: caseClient.ts  config.ts  fallback.ts  server.ts  sms.ts  store.ts  twilio.ts  webhooks.ts
apps/channels/src/voice/: bridge.ts  twiml.ts
apps/web/: Dockerfile  middleware.ts  next.config.mjs  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/cases/: route.ts
apps/web/app/api/health/: route.ts
apps/web/app/api/me/: route.ts
apps/web/app/api/metrics/: route.ts
apps/web/app/api/questionnaire/: route.ts
apps/web/app/api/questionnaires/: route.ts
apps/web/app/api/sumsub/: route.ts
apps/web/app/api/verify/: route.ts
apps/web/app/auth/login/: route.ts
apps/web/app/dashboard/: page.tsx
apps/web/app/dashboard/[id]/: auto-refresh.tsx  page.tsx
apps/web/app/dashboard/metrics/: page.tsx
apps/web/app/dashboard/questionnaires/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/new/: page.tsx
apps/web/lib/: channels.ts  session.ts
docs/: ARCHITECTURE.md  COSTS.md  DEPLOY.md  VOICE-TEST.md
scripts/: cloudrun-power.sh  deploy-cloudrun.sh  smoke.mjs  tunnel-setup.sh  voice-test.sh
(+19 files in other folders)
