[project]
name = "vera-agent"
version = "0.0.0"
description = "Vera — the TrustLine KYC agent (Google ADK)"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=0.1.0",
    "python-dotenv>=1.0.1",
    "psycopg[binary]>=3.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vera*"]
